--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,59 +1,67 @@
 # 2024-04-04
 
-共 149 条
+共 156 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 09:40:22 GMT+0800 (China Standard Time) -->
-1. [孩子炒菜走红幼儿园反对被称辛者库](https://so.toutiao.com/search?keyword=孩子炒菜走红幼儿园反对被称辛者库)
+<!-- 最后更新时间 Thu Apr 04 2024 10:15:25 GMT+0800 (China Standard Time) -->
 1. [直击清明公祭轩辕黄帝现场](https://so.toutiao.com/search?keyword=直击清明公祭轩辕黄帝现场)
+1. [马英九参加清明公祭轩辕黄帝典礼](https://so.toutiao.com/search?keyword=马英九参加清明公祭轩辕黄帝典礼)
 1. [来看各地清明文化习俗](https://so.toutiao.com/search?keyword=来看各地清明文化习俗)
+1. [孩子炒菜走红幼儿园反对被称辛者库](https://so.toutiao.com/search?keyword=孩子炒菜走红幼儿园反对被称辛者库)
+1. [青海茫崖5.5级地震 新疆多地有震感](https://so.toutiao.com/search?keyword=青海茫崖5.5级地震+新疆多地有震感)
+1. [沙利文肋骨骨折](https://so.toutiao.com/search?keyword=沙利文肋骨骨折)
 1. [“辛者库”幼儿园报名已排到后年](https://so.toutiao.com/search?keyword=“辛者库”幼儿园报名已排到后年)
 1. [伊朗东南部两地军事总部遭恐袭](https://so.toutiao.com/search?keyword=伊朗东南部两地军事总部遭恐袭)
-1. [沙利文肋骨骨折](https://so.toutiao.com/search?keyword=沙利文肋骨骨折)
-1. [姐姐做手工 弟弟捣乱被一巴掌拍倒](https://so.toutiao.com/search?keyword=姐姐做手工+弟弟捣乱被一巴掌拍倒)
-1. [青海茫崖5.5级地震 新疆多地有震感](https://so.toutiao.com/search?keyword=青海茫崖5.5级地震+新疆多地有震感)
 1. [食用蜂蜜或花粉能防过敏？假的](https://so.toutiao.com/search?keyword=食用蜂蜜或花粉能防过敏？假的)
+1. [姐姐做手工 弟弟捣乱被一巴掌拍倒](https://so.toutiao.com/search?keyword=姐姐做手工+弟弟捣乱被一巴掌拍倒)
 1. [以色列军方和总统接连道歉](https://so.toutiao.com/search?keyword=以色列军方和总统接连道歉)
-1. [地震致高铁晚点 一男子大闹车站](https://so.toutiao.com/search?keyword=地震致高铁晚点+一男子大闹车站)
-1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
-1. [军媒就解放军中缅边境演习发声](https://so.toutiao.com/search?keyword=军媒就解放军中缅边境演习发声)
-1. [清明节可以说快乐吗](https://so.toutiao.com/search?keyword=清明节可以说快乐吗)
-1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
-1. [开封王婆：现在上台心里有负担](https://so.toutiao.com/search?keyword=开封王婆：现在上台心里有负担)
-1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
 1. [“内鬼”张平被查：长期在纪委工作](https://so.toutiao.com/search?keyword=“内鬼”张平被查：长期在纪委工作)
+1. [军媒就解放军中缅边境演习发声](https://so.toutiao.com/search?keyword=军媒就解放军中缅边境演习发声)
+1. [大V评跨海大桥成违建：难道要拆吗](https://so.toutiao.com/search?keyword=大V评跨海大桥成违建：难道要拆吗)
+1. [清明节可以说快乐吗](https://so.toutiao.com/search?keyword=清明节可以说快乐吗)
 1. [房东找理由不退押金 鸡蛋里挑骨头](https://so.toutiao.com/search?keyword=房东找理由不退押金+鸡蛋里挑骨头)
+1. [地震致高铁晚点 一男子大闹车站](https://so.toutiao.com/search?keyword=地震致高铁晚点+一男子大闹车站)
+1. [开封王婆：现在上台心里有负担](https://so.toutiao.com/search?keyword=开封王婆：现在上台心里有负担)
 1. [台湾可能进入大地震周期](https://so.toutiao.com/search?keyword=台湾可能进入大地震周期)
+1. [张元英魔法签名](https://so.toutiao.com/search?keyword=张元英魔法签名)
 1. [女生吃夜宵拒搭讪被打 男子已刑拘](https://so.toutiao.com/search?keyword=女生吃夜宵拒搭讪被打+男子已刑拘)
 1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
-1. [地震给台湾居民生活带来怎样影响](https://so.toutiao.com/search?keyword=地震给台湾居民生活带来怎样影响)
-1. [张元英魔法签名](https://so.toutiao.com/search?keyword=张元英魔法签名)
-1. [英超：阿森纳2-0卢顿](https://so.toutiao.com/search?keyword=英超：阿森纳2-0卢顿)
-1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
+1. [台湾又连发多次4级及以上地震](https://so.toutiao.com/search?keyword=台湾又连发多次4级及以上地震)
+1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
+1. [冥币店仓库起火 店主：损失好几万](https://so.toutiao.com/search?keyword=冥币店仓库起火+店主：损失好几万)
 1. [花莲县长救灾身穿马甲标注姓名职务](https://so.toutiao.com/search?keyword=花莲县长救灾身穿马甲标注姓名职务)
+1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
 1. [小米汽车门店回应SU7座椅包浆](https://so.toutiao.com/search?keyword=小米汽车门店回应SU7座椅包浆)
+1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
+1. [本世纪仅4支球队做到连续40场不败](https://so.toutiao.com/search?keyword=本世纪仅4支球队做到连续40场不败)
+1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
+1. [监控拍下台湾地震来袭可怕瞬间](https://so.toutiao.com/search?keyword=监控拍下台湾地震来袭可怕瞬间)
 1. [官方回应大连星海湾大桥违建](https://so.toutiao.com/search?keyword=官方回应大连星海湾大桥违建)
+1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
 1. [花莲10层大楼强震中倒塌瞬间曝光](https://so.toutiao.com/search?keyword=花莲10层大楼强震中倒塌瞬间曝光)
+1. [姜爷爷说福宝有点紧张只是没适应](https://so.toutiao.com/search?keyword=姜爷爷说福宝有点紧张只是没适应)
+1. [提灯定损事件还没有尘埃落定](https://so.toutiao.com/search?keyword=提灯定损事件还没有尘埃落定)
+1. [黄山举行黄帝祀典暨轩辕车会活动](https://so.toutiao.com/search?keyword=黄山举行黄帝祀典暨轩辕车会活动)
+1. [向太称向佐小学曾遭遇校园霸凌](https://so.toutiao.com/search?keyword=向太称向佐小学曾遭遇校园霸凌)
+1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
+1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
+1. [地震给台湾居民生活带来怎样影响](https://so.toutiao.com/search?keyword=地震给台湾居民生活带来怎样影响)
+1. [俄方称愿意就乌克兰问题进行对话](https://so.toutiao.com/search?keyword=俄方称愿意就乌克兰问题进行对话)
+1. [丁俊晖5-3领先马克·艾伦](https://so.toutiao.com/search?keyword=丁俊晖5-3领先马克·艾伦)
+1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
+1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
+1. [山东硬核幼儿园 孩子精通编织烹饪](https://so.toutiao.com/search?keyword=山东硬核幼儿园+孩子精通编织烹饪)
+1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
+1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
+1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
+1. [英超：阿森纳2-0卢顿](https://so.toutiao.com/search?keyword=英超：阿森纳2-0卢顿)
 1. [德军工巨头：欧洲不能再依赖美保护](https://so.toutiao.com/search?keyword=德军工巨头：欧洲不能再依赖美保护)
 1. [祁连山盗采事件举报人坠亡](https://so.toutiao.com/search?keyword=祁连山盗采事件举报人坠亡)
 1. [美代表警告伊朗别因使馆遇袭报复美](https://so.toutiao.com/search?keyword=美代表警告伊朗别因使馆遇袭报复美)
-1. [提灯定损事件还没有尘埃落定](https://so.toutiao.com/search?keyword=提灯定损事件还没有尘埃落定)
-1. [向太称向佐小学曾遭遇校园霸凌](https://so.toutiao.com/search?keyword=向太称向佐小学曾遭遇校园霸凌)
-1. [小区“骨灰房”扎堆 专家称可起诉](https://so.toutiao.com/search?keyword=小区“骨灰房”扎堆+专家称可起诉)
-1. [媒体：玉山和稀泥是对施政能力心虚](https://so.toutiao.com/search?keyword=媒体：玉山和稀泥是对施政能力心虚)
 1. [台湾学生在中山大学合唱《那些年》](https://so.toutiao.com/search?keyword=台湾学生在中山大学合唱《那些年》)
-1. [地震后目睹山崩 台湾游客崩溃大哭](https://so.toutiao.com/search?keyword=地震后目睹山崩+台湾游客崩溃大哭)
-1. [丁俊晖5-3领先马克·艾伦](https://so.toutiao.com/search?keyword=丁俊晖5-3领先马克·艾伦)
-1. [网友谈小米营销：看小字否则踩大坑](https://so.toutiao.com/search?keyword=网友谈小米营销：看小字否则踩大坑)
-1. [山东硬核幼儿园 孩子精通编织烹饪](https://so.toutiao.com/search?keyword=山东硬核幼儿园+孩子精通编织烹饪)
-1. [多地出现个人购买商品房专放骨灰盒](https://so.toutiao.com/search?keyword=多地出现个人购买商品房专放骨灰盒)
-1. [马英九参观港珠澳大桥惊叹连连](https://so.toutiao.com/search?keyword=马英九参观港珠澳大桥惊叹连连)
 1. [八村塁谈海斯胯下换手扣篮](https://so.toutiao.com/search?keyword=八村塁谈海斯胯下换手扣篮)
-1. [六大行存款一年多了14万亿](https://so.toutiao.com/search?keyword=六大行存款一年多了14万亿)
 1. [《乘风踏浪》彭锦绣和罗现发生冲突](https://so.toutiao.com/search?keyword=《乘风踏浪》彭锦绣和罗现发生冲突)
 1. [大V谈提灯定损后续：有人要倒大霉](https://so.toutiao.com/search?keyword=大V谈提灯定损后续：有人要倒大霉)
-1. [冥币店仓库起火 店主：损失好几万](https://so.toutiao.com/search?keyword=冥币店仓库起火+店主：损失好几万)
-1. [雷军亲自为小米SU7车主开门](https://so.toutiao.com/search?keyword=雷军亲自为小米SU7车主开门)
 1. [王婆的烦恼：现在上台心里有负担](https://so.toutiao.com/search?keyword=王婆的烦恼：现在上台心里有负担)
 1. [花莲一栋高楼被“整根拔起”](https://so.toutiao.com/search?keyword=花莲一栋高楼被“整根拔起”)
 1. [福宝回国 车门一关宋爷爷大哭](https://so.toutiao.com/search?keyword=福宝回国+车门一关宋爷爷大哭)
@@ -83,7 +91,6 @@
 1. [台未来三天或还有规模7级地震发生](https://so.toutiao.com/search?keyword=台未来三天或还有规模7级地震发生)
 1. [都说“四五清明” 今年为啥不一样](https://so.toutiao.com/search?keyword=都说“四五清明”+今年为啥不一样)
 1. [日美澳菲将在南海首次联合军演](https://so.toutiao.com/search?keyword=日美澳菲将在南海首次联合军演)
-1. [为何台湾地震影响区域这么大](https://so.toutiao.com/search?keyword=为何台湾地震影响区域这么大)
 1. [耿爽：中方对伊朗的悲痛感同身受](https://so.toutiao.com/search?keyword=耿爽：中方对伊朗的悲痛感同身受)
 1. [大熊猫“福宝”抵达成都](https://so.toutiao.com/search?keyword=大熊猫“福宝”抵达成都)
 1. [地图上看台湾地震各地受灾情况](https://so.toutiao.com/search?keyword=地图上看台湾地震各地受灾情况)
